loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:4: error: reassignment to val
if (estSurBiscuit=false){
                 ^